hphp/hack/test/typecheck/traversable_foreach2.php.exp
File "traversable_foreach2.php", line 14, characters 12-13:
Invalid foreach (Typing[4110])
File "traversable_foreach2.php", line 14, characters 12-13:
This is an object of type KeyedTraversable because this is used in a foreach statement
File "traversable_foreach2.php", line 13, characters 15-25:
It is incompatible with an object of type Traversable
